objects/Root_Cause__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occurance__c</fullName>
        <label>Occurance</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Risk_ID__c</fullName>
        <label>Potential Risk ID</label>
        <referenceTo>Potential_Risk__c</referenceTo>
        <relationshipLabel>Root Cause</relationshipLabel>
        <relationshipName>Root_Cause</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Name__c</fullName>
        <label>Root Cause Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Root Cause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Potential_Risk_ID__c</columns>
        <columns>Root_Cause_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Root Cause ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Cause</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>